[gd_scene load_steps=3 format=3 uid="uid://b2f8ghr031dy5"]

[ext_resource type="Script" path="res://HUD.gd" id="1_kadck"]
[ext_resource type="FontFile" uid="uid://cmdjv4qjb4wau" path="res://fonts/Xolonium-Regular.ttf" id="2_j1yl2"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_kadck")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_j1yl2")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -175.0
offset_right = 245.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_j1yl2")
theme_override_font_sizes/font_size = 70
text = "Trash Crashers!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Credits" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -486.0
offset_top = -208.0
offset_right = -6.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_j1yl2")
theme_override_font_sizes/font_size = 32
text = "Credits:
Aryan Goel
Emiliano Melendrez
Bradly Saavedra
William Wang"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -304.0
offset_right = 94.0
offset_bottom = -204.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_j1yl2")
theme_override_font_sizes/font_size = 64
text = "1P"

[node name="StartButton2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -175.0
offset_right = 94.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_j1yl2")
theme_override_font_sizes/font_size = 64
text = "2P"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartButton2" to="." method="_on_start_button_2_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
